// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate réduction générale > DFS 1`] = `
"salarié . cotisations . exonérations . réduction générale: 575
salarié . cotisations . exonérations . réduction générale . imputation chômage: 72
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 467"
`;

exports[`calculate réduction générale > DFS 2`] = `
"salarié . cotisations . exonérations . réduction générale: 575
salarié . cotisations . exonérations . réduction générale . imputation chômage: 72
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 467"
`;

exports[`calculate réduction générale > DFS 3`] = `
"salarié . cotisations . exonérations . réduction générale: 575
salarié . cotisations . exonérations . réduction générale . imputation chômage: 72
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 467"
`;

exports[`calculate réduction générale > DFS 4`] = `
"salarié . cotisations . exonérations . réduction générale: 575
salarié . cotisations . exonérations . réduction générale . imputation chômage: 72
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 467"
`;

exports[`calculate réduction générale > DFS 5`] = `
"salarié . cotisations . exonérations . réduction générale: 575
salarié . cotisations . exonérations . réduction générale . imputation chômage: 72
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 467"
`;

exports[`calculate réduction générale > JEI 1`] = `
"salarié . cotisations . exonérations . réduction générale: null
salarié . cotisations . exonérations . réduction générale . imputation chômage: null
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: null
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: null"
`;

exports[`calculate réduction générale > effectif 1`] = `
"salarié . cotisations . exonérations . réduction générale: 523
salarié . cotisations . exonérations . réduction générale . imputation chômage: 66
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 98
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 425"
`;

exports[`calculate réduction générale > effectif 2`] = `
"salarié . cotisations . exonérations . réduction générale: 530
salarié . cotisations . exonérations . réduction générale . imputation chômage: 66
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 98
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 431"
`;

exports[`calculate réduction générale > heures complémentaires 1`] = `
"salarié . cotisations . exonérations . réduction générale: 483
salarié . cotisations . exonérations . réduction générale . imputation chômage: 60
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 91
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 392"
`;

exports[`calculate réduction générale > heures supplémentaires 1`] = `
"salarié . cotisations . exonérations . réduction générale: 607
salarié . cotisations . exonérations . réduction générale . imputation chômage: 76
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 114
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 492"
`;

exports[`calculate réduction générale > salaire 1`] = `
"salarié . cotisations . exonérations . réduction générale: 32
salarié . cotisations . exonérations . réduction générale . imputation chômage: 4
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 6
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 26"
`;

exports[`calculate réduction générale > salaire 2`] = `
"salarié . cotisations . exonérations . réduction générale: 80
salarié . cotisations . exonérations . réduction générale . imputation chômage: 10
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 15
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 65"
`;

exports[`calculate réduction générale > salaire 3`] = `
"salarié . cotisations . exonérations . réduction générale: 160
salarié . cotisations . exonérations . réduction générale . imputation chômage: 20
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 30
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 130"
`;

exports[`calculate réduction générale > salaire 4`] = `
"salarié . cotisations . exonérations . réduction générale: 239
salarié . cotisations . exonérations . réduction générale . imputation chômage: 30
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 45
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 194"
`;

exports[`calculate réduction générale > salaire 5`] = `
"salarié . cotisations . exonérations . réduction générale: 319
salarié . cotisations . exonérations . réduction générale . imputation chômage: 40
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 60
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 259"
`;

exports[`calculate réduction générale > salaire 6`] = `
"salarié . cotisations . exonérations . réduction générale: 399
salarié . cotisations . exonérations . réduction générale . imputation chômage: 50
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 75
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 324"
`;

exports[`calculate réduction générale > salaire 7`] = `
"salarié . cotisations . exonérations . réduction générale: 479
salarié . cotisations . exonérations . réduction générale . imputation chômage: 60
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 90
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 389"
`;

exports[`calculate réduction générale > salaire 8`] = `
"salarié . cotisations . exonérations . réduction générale: 470
salarié . cotisations . exonérations . réduction générale . imputation chômage: 59
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 88
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 381"
`;

exports[`calculate réduction générale > salaire 9`] = `
"salarié . cotisations . exonérations . réduction générale: 204
salarié . cotisations . exonérations . réduction générale . imputation chômage: 26
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 38
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 165"
`;

exports[`calculate réduction générale > salaire 10`] = `
"salarié . cotisations . exonérations . réduction générale: 0
salarié . cotisations . exonérations . réduction générale . imputation chômage: 0
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 0
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 0"
`;

exports[`calculate réduction générale > stage 1`] = `
"salarié . cotisations . exonérations . réduction générale: 523
salarié . cotisations . exonérations . réduction générale . imputation chômage: 66
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 98
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 425"
`;

exports[`calculate réduction générale > temps partiel 1`] = `
"salarié . cotisations . exonérations . réduction générale: 392
salarié . cotisations . exonérations . réduction générale . imputation chômage: 49
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 74
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 318"
`;
